# ZeroSumSquares

./: CMakeLists.txt  README.md  main.cpp
Results/: Matrices-10-10.txt  Matrices-10-11.txt  Matrices-11-11.txt  Matrices-4-5.txt  Matrices-5-5.txt  Matrices-5-6.txt  Matrices-6-6.txt  Matrices-6-7.txt  Matrices-7-7.txt  Matrices-7-8.txt  Matrices-8-8.txt  Matrices-8-9.txt  Matrices-9-10.txt  Matrices-9-9.txt
